--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,11 @@ dataset
 cache
 datasets
 __pycache__
+audio
+evaluation-result
+evaluation_result
+hf_cache
+CLI.txt
+lightning_logs
+**/*.png
+**/*.csv
